--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<section id="navbar">
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#"><img src="images/Logo.png">Pendaftaran Mahasiswa PKL</a>
+				<a class="navbar-brand" href="#"><img src="images/logo.png">Pendaftaran Mahasiswa PKL</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
