--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</button>
 				<div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
 					<form class="d-flex">
-						<button class="btn btn-primary" type="submit">Login</button>
+						<a href="login.html" class="btn btn-primary" type="submit">Login</a>
 						<button class="btn btn-primary" type="submit">Daftar</button>
 					</form>
 				</div>
