--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
 					<form class="d-flex">
 						<a href="login.html" class="btn btn-primary" type="submit">Login</a>
-						<button class="btn btn-primary" type="submit">Daftar</button>
+						<a href="daftar.html" class="btn btn-primary" type="submit">Daftar</a>
 					</form>
 				</div>
 			</div>
@@ -36,9 +36,9 @@
 
 	<section class="pilihan">
 		<div class="d-grid gap-3">
-			<button class="btn btn-primary" type="button">Button</button>
-			<button class="btn btn-primary" type="button">Button</button>
-			<button class="btn btn-primary" type="button">Button</button>
+			<a href="jadwal.html" class="btn btn-primary" type="button">Jadwal PKL</a>
+			<a href="formpendaftaran.html" class="btn btn-primary" type="button">Form Pendaftaran</a>
+			<a href="cekstatus.html" class="btn btn-primary" type="button">Cek Status</a>
 		</div>
 	</section>
 
