--- a/daftar.html
+++ b/daftar.html
@@ -29,8 +29,8 @@
                      <label>Password</label>
                      <input type="password" class="form-control" placeholder="Password">
                   </div>
-                  <button type="submit" class="btn btn-black">Login</button>
-                  <button type="submit" class="btn btn-secondary">Register</button>
+                 <a href="login.html" class="btn btn-black" type="submit">Login</a>
+                  <a href="index.html" class="btn btn-secondary" type="submit">Daftar</a>
                </form>
             </div>
          </div>
